tests/negative/bad_goto.def
def foo () -> void
begin
    goto bar;
end
